--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,11 @@ project(CPPNote)
 
 set(CMAKE_CXX_STANDARD 14)
 
-#add_subdirectory(Chapter12)
-#add_subdirectory(Chapter13)
+add_subdirectory(Chapter10)
+add_subdirectory(Chapter12)
+add_subdirectory(Chapter13)
+add_subdirectory(Chapter15)
+add_subdirectory(Chapter18)
 
 add_subdirectory(EffectiveModernC++)
 
