--- a/EffectiveModernC++/CMakeLists.txt
+++ b/EffectiveModernC++/CMakeLists.txt
@@ -3,4 +3,5 @@ add_executable(Item2 Item2.cpp)
 add_executable(Item3 Item3.cpp)
 add_executable(Item4 Item4.cpp)
 add_executable(Item5 Item5.cpp)
+add_executable(Item6 Item6.cpp)
 add_executable(Item39 Item39.cpp)
