--- a/EffectiveModernC++/CMakeLists.txt
+++ b/EffectiveModernC++/CMakeLists.txt
@@ -5,4 +5,5 @@ add_executable(Item4 Item4.cpp)
 add_executable(Item5 Item5.cpp)
 add_executable(Item6 Item6.cpp)
 add_executable(Item7 Item7.cpp)
+add_executable(Item8 Item8.cpp)
 add_executable(Item39 Item39.cpp)
