--- a/EffectiveModernC++/CMakeLists.txt
+++ b/EffectiveModernC++/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(Item6 Item6.cpp)
 add_executable(Item7 Item7.cpp)
 add_executable(Item8 Item8.cpp)
 add_executable(Item9 Item9.cpp)
+add_executable(Item13 Item13.cpp)
 add_executable(Item39 Item39.cpp)
