--- a/EffectiveModernC++/CMakeLists.txt
+++ b/EffectiveModernC++/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(Item7 Item7.cpp)
 add_executable(Item8 Item8.cpp)
 add_executable(Item9 Item9.cpp)
 add_executable(Item13 Item13.cpp)
+add_executable(Item14 Item14.cpp)
 add_executable(Item39 Item39.cpp)
