--- a/EffectiveModernC++/CMakeLists.txt
+++ b/EffectiveModernC++/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(Item8 Item8.cpp)
 add_executable(Item9 Item9.cpp)
 add_executable(Item13 Item13.cpp)
 add_executable(Item14 Item14.cpp)
+add_executable(Item15 Item15.cpp)
+add_executable(Item17 Item17.cpp)
 add_executable(Item39 Item39.cpp)
